local/logs/project.log
2021-12-22T15:28:07.780Z - normal: Load ~/.CocosCreator/settings.json
2021-12-22T15:28:08.897Z - normal: Initializing Asset Database
2021-12-22T15:28:08.899Z - normal: checking language setting...
2021-12-22T15:28:08.899Z - normal: Language: en
2021-12-22T15:28:09.457Z - success: preview server running at http://localhost:7456
2021-12-22T15:28:09.458Z - success: protocol editor-framework registered
2021-12-22T15:28:09.459Z - success: protocol app registered
2021-12-22T15:28:09.459Z - success: protocol theme registered
2021-12-22T15:28:09.459Z - success: protocol packages registered
2021-12-22T15:28:09.459Z - success: protocol uuid registerred
2021-12-22T15:28:09.459Z - success: protocol db registerred
2021-12-22T15:28:09.459Z - success: protocol thumbnail registerred
2021-12-22T15:28:09.459Z - success: protocol unpack registerred
2021-12-22T15:28:09.459Z - success: protocol disable-commonjs registerred
2021-12-22T15:28:10.982Z - normal: connected!
2021-12-22T15:28:10.984Z - normal: Check project C:\Users\Dell\OneDrive\Desktop\2048Clone
2021-12-22T15:28:10.985Z - normal: Initializing project C:\Users\Dell\OneDrive\Desktop\2048Clone
2021-12-22T15:28:11.314Z - normal: Initializing Cocos2d
2021-12-22T15:28:11.986Z - normal: Initializing engine extends
2021-12-22T15:28:12.004Z - success: alipay-adapter loaded
2021-12-22T15:28:12.009Z - success: asset-db-debugger loaded
2021-12-22T15:28:12.013Z - success: baidu-adapter loaded
2021-12-22T15:28:12.017Z - success: color-picker loaded
2021-12-22T15:28:12.119Z - success: fb-audience-network loaded
2021-12-22T15:28:12.173Z - success: fb-live-stream loaded
2021-12-22T15:28:12.180Z - success: google-play-instant loaded
2021-12-22T15:28:12.190Z - success: huawei-runtime loaded
2021-12-22T15:28:12.367Z - success: cpk-publish loaded
2021-12-22T15:28:12.368Z - success: jsb-adapter loaded
2021-12-22T15:28:12.371Z - success: oppo-runtime loaded
2021-12-22T15:28:12.373Z - success: package-manager loaded
2021-12-22T15:28:12.460Z - success: qqplay-adapter loaded
2021-12-22T15:28:12.462Z - success: runtime-dev-tools loaded
2021-12-22T15:28:12.465Z - success: sdkbox loaded
2021-12-22T15:28:12.467Z - success: tester loaded
2021-12-22T15:28:12.468Z - success: ui-kit-preview-extra loaded
2021-12-22T15:28:12.469Z - success: ui-kit-preview loaded
2021-12-22T15:28:12.470Z - success: ui-kit loaded
2021-12-22T15:28:12.475Z - success: vivo-runtime loaded
2021-12-22T15:28:12.475Z - success: weapp-adapter loaded
2021-12-22T15:28:12.476Z - success: xiaomi-adapter loaded
2021-12-22T15:28:12.478Z - success: alipay-minigame loaded
2021-12-22T15:28:12.517Z - success: assets loaded
2021-12-22T15:28:12.519Z - success: builder loaded
2021-12-22T15:28:12.732Z - success: cocos-services loaded
2021-12-22T15:28:12.735Z - success: console loaded
2021-12-22T15:28:12.761Z - success: fb-instant-games loaded
2021-12-22T15:28:12.763Z - success: game-window loaded
2021-12-22T15:28:12.764Z - success: google-instant-games loaded
2021-12-22T15:28:12.767Z - success: hierarchy loaded
2021-12-22T15:28:12.768Z - success: inspector loaded
2021-12-22T15:28:12.769Z - success: keystore loaded
2021-12-22T15:28:12.773Z - success: node-library loaded
2021-12-22T15:28:12.774Z - success: package-asset loaded
2021-12-22T15:28:12.775Z - success: preferences loaded
2021-12-22T15:28:12.776Z - success: project-exporter loaded
2021-12-22T15:28:12.777Z - success: project-importer loaded
2021-12-22T15:28:12.779Z - success: project-settings loaded
2021-12-22T15:28:12.781Z - success: scene loaded
2021-12-22T15:28:12.782Z - success: simulator-debugger loaded
2021-12-22T15:28:12.783Z - success: sprite-editor loaded
2021-12-22T15:28:12.786Z - success: store loaded
2021-12-22T15:28:12.789Z - success: timeline loaded
2021-12-22T15:28:12.796Z - success: xiaomi-runtime loaded
2021-12-22T15:28:15.005Z - info: Cocos Services load base data!
2021-12-22T15:28:17.670Z - failed: [db-task][init] Failed to import asset C:\Users\Dell\OneDrive\Desktop\2048Clone\assets\Scripts\touchPad.js, message: Compile error: SyntaxError: C:/Users/Dell/OneDrive/Desktop/2048Clone/assets/Scripts/touchPad.js: Unexpected token, expected , (43:1)
  41 |         Emitter.instance.emit("DOWN");
  42 |     }
> 43 | };
     |  ^
    at Parser.pp$5.raise (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3564:12)
    at Parser.pp$3.parseSubscripts (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
2021-12-22T15:28:17.950Z - normal: Loading packages
2021-12-22T15:28:17.955Z - normal: Watching packages
2021-12-22T15:28:18.296Z - normal: Run Application
